<resources>
    <string name="app_name">BarGo</string>
    <string name="mis_reservas">Mis Reservas</string>
    <string name="pre_points">Actualmente tienes un total de:</string>
    <string name="points"> puntos</string>
    <string name="more_points">¿Quieres más puntos?</string>
    <string name="points_waiting">¿A  qué estás esperando?</string>
    <string name="make_challenges">Haz Retos</string>
    <string name="exchange">Intercámbialos</string>
    <string name="info">INFO</string>
    <string name="cancelar">Cancelar</string>
    <string name="obtener">OBTENER</string>
    <string name="noObtener">No tienes suficiente puntos</string>
    <string name="yaObtenido">Ya obtenido</string>
    <string name="contraseña">Contraseña</string>
    <string name="acceder">ACCEDER</string>
    <string name="a_n_no_tienes_tu_cuenta_reg_strate">¿Aún no tienes tu cuenta? Regístrate</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="logobargo">logoBarGO</string>
    <string name="ver_contraseña">Ver contraseña</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="ya_tienes_tu_cuenta_inicia_sesi_n">¿Ya tienes tu cuenta? Inicia sesión</string>
    <string name="registro">Registro</string>
    <string name="consumidor">Consumidor</string>
    <string name="propietario">Propietario</string>
    <string name="nombre_establecimiento">Nombre establecimiento</string>
    <string name="direcci_n">Dirección</string>
    <string name="n_mero_de_sillas">Número de sillas</string>
    <string name="n_mero_de_mesas">Número de mesas</string>
    <string name="horario">Horario</string>
    <string name="descripci_n">Descripción</string>
    <string name="p_gina_web">Página web</string>
    <string name="terraza_exterior">Terraza exterior</string>
    <string name="tipus_usuari">¿Qué tipo de usuario eres?</string>
    <string name="modificar_datos">Modificar datos</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="guardar_cambios">GUARDAR</string>
    <string name="quieres_eliminar_tu_cuenta">¿Quieres eliminar tu cuenta?</string>
    <string name="quieres_cerrar_la_sesi_n">¿Quieres cerrar la sesión?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_usuario_">Nombre usuario:</string>
    <string name="contrase_a_nueva_">Contraseña nueva:</string>
    <string name="confirma_contrase_a_nueva_">Confirma la contraseña nueva:</string>
    <string name="nombre_establecimiento_">Nombre establecimiento:</string>
    <string name="direccion_">Dirección:</string>
    <string name="n_mero_de_sillas_">Número de sillas:</string>
    <string name="n_mero_de_mesas_">Número de mesas:</string>
    <string name="horario_">Horario:</string>
    <string name="descripci_n_">Descripción:</string>
    <string name="p_gina_web_">Página web:</string>
    <string name="guio">-</string>
    <string name="mes">+</string>
    <string name="menys">-</string>
    <string name="interior_">Interior:</string>
    <string name="modificar_ocupaci_n">Modificar ocupación</string>
    <string name="lleno">Lleno</string>
    <string name="medio_lleno">Medio lleno</string>
    <string name="vac_o">Vacío</string>
    <string name="exterior">Exterior:</string>
    <string name="buscar_">Buscar...</string>
    <string name="ocupaci_n_actual">Ocupación actual:</string>
    <string name="informaci_n_adicional">Información adicional:</string>
    <string name="ocupaci_n_exterior">Ocupación exterior</string>
    <string name="ocupaci_n_interior">Ocupación interior</string>
    <string name="reservar">Reservar</string>
    <string name="configuraci_n">Configuración</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="horario_del_evento">Horario del evento:</string>
    <string name="nombre_evento">Nombre evento</string>
    <string name="fecha_">Fecha:</string>
    <string name="hora">Hora</string>
    <string name="hora_">Hora:</string>
    <string name="fecha">Fecha</string>
    <string name="eliminar">Eliminar</string>
    <string name="eventos">Eventos</string>
    <string name="evento">Evento</string>
    <string name="fecha_evento">Fecha evento</string>
    <string name="hora_evento">Hora evento</string>
    <string name="crear_evento">Crear</string>
    <string name="correo_electronico_">Correo electrónico:</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="reserva">Reserva</string>
    <string name="format_fecha">dd/mm/aaaa</string>
    <string name="fecha_reserva">Fecha reserva:</string>
    <string name="hora_reserva">Hora reserva:</string>
    <string name="n_mero_de_personas_reserva">Número de personas reserva:</string>
    <string name="hh_mm">hh:mm</string>
    <string name="ubicaci_n_mesa_reserva">Ubicación mesa reserva:</string>
    <string name="interior">Interior</string>
    <string name="Exterior">Exterior</string>
    <string name="reservas">Reservas</string>
    <string name="validar">VALIDAR</string>
    <string name="_3500_puntos">3500 puntos</string>
    <string name="codigo_establecimiento_">Código establecimiento:</string>
    <string name="codigo_establecimiento">Código establecimiento</string>
    <string name="canjear">Canjear</string>
    <string name="introduce_el_c_digo_de_tu_consumici_n">Introduce un código:</string>
    <string name="c_digo">Código</string>
    <string name="nombre_premio">Nombre premio</string>
    <string name="nom_repte">Nom repte</string>
    <string name="_0_1">0/1</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="continuar">CONTINUAR</string>
    <string name="correo_electr_nico_asociado_a_tu_cuenta_">Correo electrónico asociado a tu cuenta:</string>
    <string name="resposta">Resposta</string>
    <string name="he_le_do_y_acepto_la_pol_tica_de_privacidad">He leído y acepto la política de privacidad</string>
    <string name="pol_tica_de_privacidad">Política de privacidad</string>
    <string name="texto_pol_tica_de_privacidad">Texto política de privacidad</string>
    <string name="codigo">Código</string>
    <string name="codigo_">Código:</string>
</resources>
